Added welcome, Signup and add detail page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary_bg_color">#FFFCF8</color>
+    <color name="secondary_bg_color">#EEEEFF</color>
+    <color name="primary_text_color">#121212</color>
+    <color name="inverted_text_color">#FFFCF8</color>
+    <color name="secondary_text_color">#7F7C7C</color>
+    <color name="primary_accent_color">#1B1BCE</color>
+    <color name="secondary_accent_color">#D5F706</color>
+    <color name="inverted_accent_color">#FFFCF8</color>
+
+    <color name="disable_secondary_btn_bg">#267F7C7C</color>
+    <color name="enable_secondary_btn_bg">#261B1BCE</color>
+    <color name="warning_color">#F44336</color>
 </resources>
