--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -17,53 +17,54 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/nameTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/nxs_device_padding"
-            android:layout_marginTop="@dimen/nxs_device_padding"
-            android:text="@string/your_name"
-            android:textColor="@color/primary_text_color"
-            android:textSize="12sp"
-            android:letterSpacing="0.05"
-            android:fontFamily="@font/poppins_regular"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
-
-        <EditText
-            android:id="@+id/nameET"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/addPassLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints="name"
-            android:hint="@string/full_name"
-            android:inputType="textAutoComplete"
-            android:textSize="14sp"
-            android:textColor="@color/primary_text_color"
-            android:textColorHint="@color/secondary_text_color"
-            android:fontFamily="@font/poppins_regular"
-            android:layout_marginHorizontal="@dimen/nxs_device_padding"
-            android:backgroundTint="@color/primary_text_color"
-            app:layout_constraintStart_toStartOf="@+id/nameTV"
-            app:layout_constraintTop_toBottomOf="@+id/nameTV"/>
-
-        <TextView
-            android:id="@+id/nameWarningInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp25"
-            android:fontFamily="@font/poppins_medium"
-            android:letterSpacing="0.03"
-            app:drawableLeftCompat="@drawable/nxs_info_warning_icon"
-            android:text="This is not correct format for name"
-            android:textColor="@color/warning_color"
-            android:textSize="10sp"
-            android:drawablePadding="@dimen/nxs_device_padding_short"
-            android:visibility="visible"
-            tools:visibility="visible"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameET"
-            tools:ignore="SmallSp" />
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/primary_text_color"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/primary_text_color"
+            app:cursorColor="@color/primary_text_color"
+            android:textColorHint="@color/primary_text_color"
+            android:layout_margin="@dimen/nxs_device_padding">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/addPassEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColorHint="@color/primary_text_color"
+                android:textColor="@color/primary_text_color"
+                android:hint="@string/add_new_password" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Password Field -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/reTypePassLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/primary_text_color"
+            android:layout_margin="@dimen/nxs_device_padding"
+            app:boxBackgroundMode="outline"
+            app:passwordToggleTint="@color/primary_text_color"
+            app:boxStrokeColor="@color/primary_text_color"
+            app:passwordToggleEnabled="true"
+            app:cursorColor="@color/primary_text_color"
+            app:layout_constraintTop_toBottomOf="@id/addPassLayout"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reTypeEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColorHint="@color/primary_text_color"
+                android:textColor="@color/primary_text_color"
+                android:hint="@string/re_type_password" />
+        </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
