--- a/app/src/main/res/layout/nexis_toolbar.xml
+++ b/app/src/main/res/layout/nexis_toolbar.xml
@@ -47,18 +47,15 @@
                 app:layout_constraintTop_toTopOf="@+id/backBtn"
                 app:layout_constraintBottom_toBottomOf="@+id/backBtn"/>
 
-            <TextView
+            <ImageView
                 android:id="@+id/saveActionBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:src="@drawable/nxs_community_icon"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/nxs_save_btn_bg_selector"
                 android:fontFamily="@font/poppins_medium"
                 android:letterSpacing="0.05"
-                android:paddingHorizontal="@dimen/nxs_device_padding_for_card"
-                android:paddingTop="7dp"
-                android:paddingBottom="4dp"
                 android:text="@string/save"
                 android:textAllCaps="true"
                 android:textColor="@color/nxs_save_btn_text_color_selector"
